Fix font colors grey too light

--- a/source/css/_extend.styl
+++ b/source/css/_extend.styl
@@ -2,7 +2,7 @@ $block-caption
   text-decoration: none
   text-transform: uppercase
   letter-spacing: 2px
-  color: color-grey
+  color: color-default
   margin-bottom: 1em
   margin-left: 5px
   line-height: 1em
@@ -29,7 +29,7 @@ $base-style
     font-size: 1em
   h6
     font-size: 1em
-    color: color-grey
+    color: color-default
   hr
     border-bottom: 2px dashed color-border
     border-top: 0
