--- a/source/css/_partial/archive.styl
+++ b/source/css/_partial/archive.styl
@@ -129,12 +129,12 @@
   margin: block-margin auto
   background: #fff
   text-align: center
-  color: color-grey
+  color: color-default
   a, span
     padding: 10px 20px
     line-height: 1
   a
-    color: color-grey
+    color: color-default
     text-decoration: none
     &:hover
       background: color-theme
