--- a/source/css/_partial/article.styl
+++ b/source/css/_partial/article.styl
@@ -48,12 +48,12 @@
 .article-meta
   clearfix()
   margin: 7px 0 10px
-  color: #a6a6a6
+  color: color-default
   text-align: left
   font-family: font-oswald
   font-size: 1.1em
   a
-    color: #a6a6a6
+    color: color-default
     font-weight: 300
     text-transform: uppercase
   span
@@ -80,7 +80,7 @@
     content: "\2022"
 
 .article-category-link
-  color: color-grey
+  color: color-default
   display: inline
   margin: 0
 
@@ -148,7 +148,7 @@
 .article-title
   text-decoration: none
   font-weight: bold
-  color: #555
+  color: color-default
   line-height: line-height-title
   transition: color 0.2s
   a&:hover
@@ -260,7 +260,7 @@
       margin-right: 0.5em
       margin-left: 1em
   .caption
-    color: color-grey
+    color: color-default
     display: block
     font-size: 0.8em
     margin-top: 0.5em
@@ -285,7 +285,7 @@
   text-align: right
 
 .article-more-link a
-  color: color-grey
+  color: color-default
   display: inline-block
   font-size: 0.7em
   line-height: 1em
@@ -305,7 +305,7 @@
   padding-top: line-height
   margin: 0 article-padding article-padding
   a
-    color: color-grey
+    color: color-default
     text-decoration: none
     &:hover
       color: color-default
@@ -325,7 +325,7 @@
   color: #333
 
 li.article-tag-list-item
-  color: color-grey
+  color: color-default
   display: inline-block
   margin-right: 4px
 
@@ -362,7 +362,7 @@ li.article-tag-list-item
 
 .article-nav-link-wrap
   text-decoration: none
-  color: color-grey
+  color: color-default
   box-sizing: border-box
   margin-top: block-margin
   text-align: center
