--- a/source/css/_partial/sidebar-bottom.styl
+++ b/source/css/_partial/sidebar-bottom.styl
@@ -12,7 +12,7 @@
   font-weight: bold
 
 .widget
-  color: color-grey
+  color: color-default
   ul, ol
     li
       display: inline-block
