--- a/source/css/fashion.css
+++ b/source/css/fashion.css
@@ -293,7 +293,7 @@ object {
 	}
 .site-description {
 	margin-bottom: 20px;
-	color: #a6a6a6;
+	color: #555;
 	font-weight: 300;
 	font-family: Oswald, "Microsoft Yahei", Arial, Helvetica, sans-serif;
 	text-transform: uppercase;
@@ -410,7 +410,7 @@ object {
 	}
 #top-navigation li a {
 	padding: 0 15px;
-	color: #a6a6a6;
+	color: #555;
 	font-size: .9em;
 	line-height: 40px;
 	}
@@ -469,7 +469,7 @@ object {
 	border-bottom: 1px dotted #565656;
 	}
 #main-navigation li li a {
-	color: #a6a6a6;
+	color: #555;
 	}
 #main-navigation li a:hover,
 #main-navigation li.sfHover > a,
@@ -631,14 +631,14 @@ object {
 	color: #0071bc;
 	}
 .entry-meta {
-	color: #a6a6a6;
+	color: #555;
 	font-size: .9em;
 	font-weight: 300;
 	font-family: Oswald,"Microsoft Yahei", Arial, Helvetica, sans-serif;
 	text-transform: uppercase;
 	}
 .entry-meta a {
-	color: #a6a6a6;
+	color: #555;
 	text-decoration: none;
 	}
 .entry-meta a:hover {
@@ -720,7 +720,7 @@ object {
 	}
 .page-title {
 	margin: 0 0 10px;
-	color: #a6a6a6;
+	color: #555;
 	font-size: 1.2em;
 	text-transform: uppercase;
 	letter-spacing: 2px;
@@ -758,7 +758,7 @@ body.search .page .entry-footer {
 	}
 .author-info .author-links a {
 	margin: 0 20px 0 0;
-	color: #a6a6a6;
+	color: #555;
 	font-size: .9em;
 	font-family: Oswald, "Microsoft Yahei", Arial, Helvetica, sans-serif;
 	text-transform: uppercase;
@@ -866,7 +866,7 @@ body.search .page .entry-footer {
 	}
 .site-content .post-navigation span {
 	display: block;
-	color: #a6a6a6;
+	color: #555;
 	font-size: 1.3em;
 	font-family: Oswald, "Microsoft Yahei", Arial, Helvetica, sans-serif;
 	text-transform: uppercase;
@@ -893,7 +893,7 @@ body.search .page .entry-footer {
 .comments-title {
 	margin: 0 0 20px;
 	padding: 0 0 15px;
-	color: #a6a6a6;
+	color: #555;
 	font-size: 1.3em;
 	text-transform: uppercase;
 	letter-spacing: 2px;
@@ -943,7 +943,7 @@ body.search .page .entry-footer {
 	margin: 0 0 3px;
 	}
 .comment-list li.comment .comment-metadata a {
-	color: #a6a6a6;
+	color: #555;
 	font-size: .9em;
 	font-weight: 300;
 	font-family: Oswald, "Microsoft Yahei", Arial, Helvetica, sans-serif;
@@ -957,7 +957,7 @@ body.search .page .entry-footer {
 	float: right;
 	}
 .comment-list li.comment .reply a {
-	color: #a6a6a6;
+	color: #555;
 	font-size: .9em;
 	font-weight: 300;
 	font-family: Oswald, "Microsoft Yahei", Arial, Helvetica, sans-serif;
@@ -992,7 +992,7 @@ body.search .page .entry-footer {
 	padding: 0;
 	}
 #commentform label {
-	color: #a6a6a6;
+	color: #555;
 	font-family: Oswald, "Microsoft Yahei", Arial, Helvetica, sans-serif;
 	text-transform: uppercase;
 	letter-spacing: 2px;
@@ -1062,7 +1062,7 @@ ul.widget-tab-nav {
 .widget-tab-nav li a {
 	display: block;
 	padding: 4px 15px;
-	color: #a6a6a6;
+	color: #555;
 	font-size: 1.1em;
 	font-family: Oswald, "Microsoft Yahei", Arial, Helvetica, sans-serif;
 	text-transform: uppercase;
@@ -1133,7 +1133,7 @@ ul.widget-tab-nav {
 	}
 .widget-entry-content span,
 .widget-entry-summary span {
-	color: #a6a6a6;
+	color: #555;
 	font-size: .875em;
 	font-weight: 300;
 	font-family: Oswald, "Microsoft Yahei", Arial, Helvetica, sans-serif;
@@ -1162,7 +1162,7 @@ ul.widget-tab-nav {
 	line-height: 1.8;
 	}
 #widget-tab-tags a {
-	color: #a6a6a6;
+	color: #555;
 	text-decoration: none;
 	}
 #widget-tab-tags a:hover {
@@ -1299,7 +1299,7 @@ ul.widget-tab-nav {
 ----------------------------------------------- */
 .site-footer {
 	padding: 20px;
-	color: #a6a6a6;
+	color: #555;
 	font-size: .875em;
 	font-family: Oswald, "Microsoft Yahei", Arial, Helvetica, sans-serif;
 	text-transform: uppercase;
